kustomize/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-2048-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: game-2048.com
    http:
      paths:
      - backend:
          service:
            name: game-2048
            port:
              number: 8080
        path: /
        pathType: Prefix
